# mcap_editor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: snap.yaml
snap/: snapcraft.yaml
src/: bytearray_writable.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcap_impl.cpp  resources.qrc
